// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`user tests correct Tiltify user campaign returned 1`] = `
Object {
  "amountRaised": 0,
  "avatar": Object {
    "alt": "",
    "height": 200,
    "src": "https://assets.tiltify.com/uploads/cause/avatar/65/image001.png",
    "width": 200,
  },
  "causeCurrency": "USD",
  "causeId": 65,
  "description": null,
  "endsAt": 1570147200000,
  "fundraiserGoalAmount": 100,
  "id": 19414,
  "livestream": null,
  "metadata": Object {},
  "name": "Danny's Test Campaign",
  "originalFundraiserGoal": 100,
  "regionId": null,
  "slug": "dannys-test-campaign",
  "startsAt": 1538870400000,
  "status": "retired",
  "supportable": false,
  "supportingAmountRaised": 0,
  "totalAmountRaised": 0,
  "type": "Event",
  "user": Object {
    "avatar": Object {
      "alt": "",
      "height": 200,
      "src": "/assets/default-avatar-76197a03e710e771476f09bb2631bdfdc2fe46b2f1d821df63dbf1830428fcfe.png",
      "width": 200,
    },
    "id": 3935,
    "slug": "ender3989",
    "url": "https://tiltify.com/@ender3989",
    "username": "ender3989",
  },
}
`;

exports[`user tests correct Tiltify user campaigns returned 1`] = `
Array [
  Object {
    "amountRaised": 0,
    "avatar": Object {
      "alt": "",
      "height": 200,
      "src": "https://assets.tiltify.com/uploads/cause/avatar/65/image001.png",
      "width": 200,
    },
    "causeCurrency": "USD",
    "causeId": 65,
    "description": null,
    "endsAt": 1570147200000,
    "fundraiserGoalAmount": 100,
    "id": 19414,
    "livestream": null,
    "metadata": Object {},
    "name": "Danny's Test Campaign",
    "originalFundraiserGoal": 100,
    "regionId": null,
    "slug": "dannys-test-campaign",
    "startsAt": 1538870400000,
    "status": "retired",
    "supportable": false,
    "supportingAmountRaised": 0,
    "totalAmountRaised": 0,
    "type": "Event",
    "user": Object {
      "avatar": Object {
        "alt": "",
        "height": 200,
        "src": "/assets/default-avatar-76197a03e710e771476f09bb2631bdfdc2fe46b2f1d821df63dbf1830428fcfe.png",
        "width": 200,
      },
      "id": 3935,
      "slug": "ender3989",
      "url": "https://tiltify.com/@ender3989",
      "username": "ender3989",
    },
  },
  Object {
    "amountRaised": 36,
    "avatar": Object {
      "alt": "",
      "height": 200,
      "src": "https://assets.tiltify.com/uploads/cause/avatar/65/image001.png",
      "width": 200,
    },
    "causeCurrency": "USD",
    "causeId": 65,
    "description": "Hi! I'm Ender3989 and I like to play games. I also would love if you'd donate money to Direct Relief!",
    "endsAt": 1508198400000,
    "fundraiserGoalAmount": 100,
    "id": 4814,
    "livestream": Object {
      "channel": "ender3989",
      "type": "twitch",
    },
    "metadata": Object {},
    "name": "Playing Games for Charity!",
    "originalFundraiserGoal": 100,
    "regionId": null,
    "slug": "playing-games-for-charity",
    "startsAt": 1476748800000,
    "status": "retired",
    "supportable": false,
    "supportingAmountRaised": 0,
    "totalAmountRaised": 36,
    "type": "Event",
    "user": Object {
      "avatar": Object {
        "alt": "",
        "height": 200,
        "src": "/assets/default-avatar-76197a03e710e771476f09bb2631bdfdc2fe46b2f1d821df63dbf1830428fcfe.png",
        "width": 200,
      },
      "id": 3935,
      "slug": "ender3989",
      "url": "https://tiltify.com/@ender3989",
      "username": "ender3989",
    },
  },
]
`;

exports[`user tests correct Tiltify user owned teams returned 1`] = `Array []`;

exports[`user tests correct Tiltify user returned 1`] = `
Object {
  "about": null,
  "avatar": Object {
    "alt": "",
    "height": 200,
    "src": "/assets/default-avatar-76197a03e710e771476f09bb2631bdfdc2fe46b2f1d821df63dbf1830428fcfe.png",
    "width": 200,
  },
  "id": 3935,
  "slug": "ender3989",
  "social": Object {
    "discord": null,
    "facebook": null,
    "mixer": null,
    "twitch": null,
    "twitter": null,
    "website": null,
    "youtube": null,
  },
  "totalAmountRaised": 36,
  "url": "https://tiltify.com/@ender3989",
  "username": "ender3989",
}
`;

exports[`user tests correct Tiltify user teams returned 1`] = `Array []`;
